<resources>
    <string name="app_name">IT English</string>
    <string name="login">Войти</string>
    <string name="email">Введите адрес электронной почты</string>
    <string name="password">Введите свой пароль</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="click_to_login">У вас уже есть аккаунт? Войти</string>
    <string name="click_to_register">Нет аккаунта? Зарегистрироваться </string>
    <string name="logout">Выйти</string>
    <string name="welcome_back">Добро пожаловать!</string>
    <string name="welcome">"Добро пожаловать,"</string>
    <string name="lesson">"Lesson 1"</string>
    <string name="confirm_password">"Подтвердите пароль"</string>
    <string name="exit">Выход</string>
    <string name="next">Продолжить</string>
    <string name="motivation">Продолжайте! Вы сможете!</string>
    <string name="settings">Настройки</string>
    <string name="home">Главный</string>
    <string name="dictionary">Словарь</string>
    <string name="search">Поиск...</string>
    <string name="info">О приложении</string>
    <string name="Dictionary">Словарь</string>
    <string name="about">Oб IT English</string>
    <string name="leaderboard">Таблица лидеров</string>

    <!--
    <string-array name="lessons">
        <item>Lesson 1</item>
        <item>Lesson 2</item>
        <item>Lesson 3</item>
        <item>Lesson 4</item>
        <item>Lesson 5</item>
        <item>Lesson 6</item>
    </string-array>

    <string-array name="lesson_descriptions">
        <item>Description for Lesson 1</item>
        <item>Description for Lesson 2</item>
        <item>Description for Lesson 3</item>
        <item>Description for Lesson 4</item>
        <item>Description for Lesson 5</item>
        <item>Description for Lesson 6</item>
         ...
    </string-array> -->
</resources>